# NF1_3D_organoid_profiling_pipeline

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
0.preprocessing_data/: HPC_preprocessing.sh  README.md  local_preprocessing.sh  visualize_convolutions.sh
0.preprocessing_data/deconvolution_huygens_workflow_files/: batch_process_405.hgsb  batch_process_488.hgsb  batch_process_555.hgsb  batch_process_640.hgsb  decon_process_640.hgsd  microscope_parameters_405.hgsm  microscope_parameters_488.hgsm
0.preprocessing_data/huygens_workflow_files/: decon_process_405.hgsd  decon_process_488.hgsd  decon_process_555.hgsd  microscope_parameters_555.hgsm  microscope_parameters_640.hgsm
0.preprocessing_data/notebooks/: 0.patient_specific_preprocessing.ipynb  0.update_file_structure.ipynb  1.make_z-stack_images.ipynb  1.make_zstack_and_copy_over.ipynb  1.update_file_structure.ipynb  1z.make_zstack_and_copy_over_CQ1.ipynb  2.perform_file_corruption_checks.ipynb  2a.make_z-stack_images.ipynb  2b.perform_file_corruption_checks.ipynb  3.decon_preprocessing.ipynb  4.decon_post_processing.ipynb  5.visualize_decon.ipynb  6.perform_image_convolutions.ipynb  7.visualize_image_convolutions_2d.ipynb  8.visualize_convolutions_3d.ipynb  nyquist_sampling_calculations.ipynb
0.preprocessing_data/scripts/: 0.patient_specific_preprocessing.py  1.make_zstack_and_copy_over.py  1.update_file_structure.py  1z.make_zstack_and_copy_over_CQ1.py  2.make_z-stack_images.py  2.perform_file_corruption_checks.py  2a.make_z-stack_images.py  2b.perform_file_corruption_checks.py  3.decon_preprocessing.py  4.decon_post_processing.py  5.visualize_decon.py  6.perform_image_convolutions.py  7.visualize_image_convolutions_2d.py  8.visualize_convolutions_3d.py  nyquist_sampling_calculations.py
1.image_quality_control/: README.md  run_image_qc.sh
1.image_quality_control/nbconverted/: 0.cp_image_qc.py  1.evaluate_blur_qc.py  2.evaluate_saturation_qc.py  4.evaluate_qc_optimization.py  5.generate_optimization_report.r
1.image_quality_control/notebooks/: 0.cp_image_qc.ipynb  1.evaluate_blur_qc.ipynb  2.evaluate_saturation_qc.ipynb  3.generate_qc_report.ipynb  4.evaluate_qc_optimization.ipynb  5.generate_optimization_report.ipynb
1.image_quality_control/pipeline/: whole_image_qc.cppipe  whole_image_qc_optimization.cppipe
1.image_quality_control/qc_results/: NF0017_qc_results_optimization.parquet  all_plates_qc_results.parquet
1.image_quality_control/scripts/: 0.cp_image_qc.py  1.evaluate_blur_qc.py  2.evaluate_saturation_qc.py  3.generate_qc_report.r  4.evaluate_qc_optimization.py  5.generate_optimization_report.r
1.segment_images/: README.md  child_segmentation.sh  local_make_gifs.sh  local_segmentation.sh  parent_segmentation.sh
1.segment_images/notebooks/: 4.reconstruct_3D_masks.ipynb  5.create_cytoplasm_masks.ipynb  7.clean_up_segmentation.ipynb  (+1 more)
2.segment_images/: child_segmentation.sh  grand_parent_segmentation.sh  local_make_gifs.sh  local_parent.sh  local_segmentation.sh  local_testing.sh  parent_segmentation.sh  run_example_convolution_segmentations_local.sh  run_viz.sh  single_patient_well_resubmit.sh
3.cellprofiling/: HPC_run_featurization_grand_parent.sh  HPC_run_featurization_great_grand_parent.sh  HPC_run_featurization_parent.sh  README.md  local_run_featurization.sh  local_run_featurization_grand_parent.sh  local_run_featurization_parent.sh  whole_image_featurization.sh
4.processing_image_based_profiles/: README.md  merge_features_child.sh  merge_features_grand_parent.sh  merge_features_local.sh  merge_features_parent.sh
7.technical_analysis/: run_basicpy_test.sh
docs/: call_make_file_in_environment.sh
environments/: analysis.yml  basicpy_env.yml  deep_learning_featurizer.yml  local_create_envs.sh  makefile  makefile_submit_HPC.sh  r_env.yml  segmentation_env.yml  segmentation_nuclei.yml  sphinx_env.yml  usegment3d.yml  viz_env.yaml
profile_prep_for_sage/: README.md
src/featurization_utils/: pyproject.toml
src/featurization_utils/docs/: README.md
src/featurization_utils/src/: area_size_shape_utils.py  errors.py  granularity_utils.py  loading_classes.py  neighbors_utils.py  resource_profiling_util.py  sammed3d_featurizer.py  texture_utils.py
src/file_utils/: pyproject.toml
src/file_utils/src/: arg_parsing_utils.py  cp_parallel.py  file_checking.py  file_reading.py  notebook_init_utils.py  read_in_channel_mapping.py  segmentation_decoupling.py
src/segmentation_utils/: pyproject.toml
src/segmentation_utils/src/: cell_segmentation.py  general_segmentation_utils.py  nuclei_segmentation.py  organoid_segmentation.py  segmentation_utils.py
src/visualization_utils/: pyproject.toml
src/visualization_utils/src/: animation_utils.py
utils/: arg_parsing_utils.py  file_checking.py  pyproject.toml
utils/src/3D_image_analysis/featurization_utils/: area_size_shape_utils_gpu.py  colocalization_utils_gpu.py  granularity_utils.py  intensity_utils.py  loading_classes.py  neighbors_utils.py  sammed3d_featurizer.py  texture_utils.py
utils/src/3D_image_analysis/file_utils/: arg_parsing_utils.py  file_reading.py  preprocessing_funcs.py  read_in_channel_mapping.py
utils/src/3D_image_analysis/file_utils/errors/: __init__.py
utils/src/3D_image_analysis/segmentation_utils/: cell_segmentation.py  general_segmentation_utils.py
utils/src/3D_image_analysis/visualization_utils/: animation_utils.py
utils/src/image_analysis_3D/featurization_utils/: area_size_shape_utils.py  colocalization_utils.py  errors.py  resource_profiling_util.py  sammed3d_featurizer.py
utils/src/image_analysis_3D/file_utils/: file_checking.py  notebook_init_utils.py
utils/src/image_analysis_3D/segmentation_utils/: nuclei_segmentation.py  segmentation_decoupling.py
utils/tests/: conftest.py  test_animation_utils.py  test_arg_parsing_utils.py  test_cp_parallel.py  test_errors.py  test_file_checking.py  test_file_reading.py  test_general_segmentation_utils.py  test_notebook_init_utils.py  test_preprocessing_funcs.py  test_read_in_channel_mapping.py  test_segmentation_decoupling.py
(+260 files in other folders)
