[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "image_analysis_3D"
version = "0.0.1"
description = "Utility modules for the NF1 3D organoid profiling pipeline"
requires-python = ">=3.9"
authors = [{ name = "Michael J. Lippincott" }]
license = { text = "BSD 3-Clause License" }
dependencies = [
    "pandas",
    "numpy",
    "scipy",
    "scikit-image",
    "tifffile",
    "cellpose",
    "napari_animation",
    "networkx",
    "torch",
    "torch>=2.0.0",
    "cupy-cuda11x>=12.0.0",
    "argparse",
    "medim",
    "tqdm",
    "jupyter",
    "ipykernel"
]
[tool.uv]
# Use Python 3.11 for better compatibility with CUDA libraries
python = "3.13"
index-url = "https://download.pytorch.org/whl/cu118"
# Fall back to PyPI for other packages
extra-index-url = ["https://pypi.org/simple"]


[project.optional-dependencies]
dev = ["pytest", "black", "ruff", "pre-commit", "ipykernel"]

[tool.setuptools.packages.find]
where = ["src"]
include = [
	"featurization_utils*",
	"file_utils*",
	"segmentation_utils*",
	"visualization_utils*",
]
