[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "file_utils"
version = "0.0.0"
description = "Utility package for GFF 3D organoid profiling pipeline"
requires-python = ">=3.9"
authors = [ { name = "Michael J. Lippincott"} ]
license = { text = "BSD 3-Clause License" }

dependencies = [
    "tomli",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
    "pre-commit",
    "ipykernel",
]

[tool.setuptools]
py-modules = [
    "arg_parsing_utils",
    "file_checking",
    "file_reading",
    "notebook_init_utils",
    "segmentation_decoupling",
    "preprocessing_funcs",
    "read_in_channel_mapping",
]

[tool.setuptools.packages.find]
where = ["src/"]
include = ["src/errors*"]
